[metadata]
name = hf_search
author = Nouamane Tazi
author-email = nouamane98@gmail.com
summary = Huggingface Semantic Search
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/NouamaneTazi/hf_search
project_urls =
    Demo = https://huggingface.co/spaces/nouamanetazi/hf-search
    Source Code = https://github.com/NouamaneTazi/hf_search
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    nlp
    semantic-search
    sentence-transformers

[files]
packages =
    hf_search

[entry_points]
console_scripts =
    hf_search = hf_search.cmd:main
[bdist_wheel]
universal = 1